--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,10 @@ body {
     padding-right: 30px;
     font-size: 20px;
 }
-
+.list ul li:hover {
+    cursor: pointer;
+    font-weight: bold;
+}
 .list ul {
     line-height: 58px;
 }
